--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projeto teste</title>
+    <h1> Hello world</h1>
+    <link rel="stylesheet" href="style.css">
+</head> 
+<body>
+    <h1>Dados das pessoas</h1>
+    Nome: <input type="text" name="nome">
+    
+</body>
+</html>
 
