Opções de login alternativas

--- a/src/login.html
+++ b/src/login.html
@@ -10,6 +10,11 @@
     <body>
         <div class="sign-up">
             <!-- todo código deverá ser criado aqui -->
+            <div id="options">
+                <a> Esqueceu a Senha?</a><br>
+                <a> Cadastrar</a><br>
+                <a> Entrar como convidado</a><br>
+            </div>
         </div>
     </body>
 </html>
