--- a/src/login.html
+++ b/src/login.html
@@ -10,7 +10,14 @@
     <body>
         <div class="sign-up">
             <!-- todo código deverá ser criado aqui -->
+            <div class="logo-container">
+                <img src="./logo.svg" alt="logo"/> 
+                <h1>
+                    WEB  
+                </h1>
+            </div>
         </div>
     </body>
+
 </html>
 
