--- a/src/login.html
+++ b/src/login.html
@@ -9,7 +9,14 @@
 
     <body>
         <div class="sign-up">
-            <!-- todo código deverá ser criado aqui -->
+            <center> <h1>LOGIN</h1>
+                <form name="form_login" action="do_login.html" method="POST">
+                <input type="text" name="nome" value="" placeholder="Usuário" /><br> <p></p>
+                <input type="password" name="senha" value="" placeholder="Senha"><br> <p></p>
+                <input type="submit" class="login-button" value="Entrar">
+            </form>
+            </center>
+             
         </div>
     </body>
 </html>
