--- a/src/login.html
+++ b/src/login.html
@@ -9,21 +9,21 @@
 
     <body>
         <div class="sign-up">
-            <div> 
-                <h1>LOGIN</h1>
-                <form name="form_login" action="do_login.html" method="POST">
-                    <input type="text" name="nome" value="" placeholder="Usuário" /><br>
-                    <input type="password" name="senha" value="" placeholder="Senha"><br>
-                    <input type="submit" class="login-button" value="Entrar">
-                </form>
-            </div>  
-             
+            
             <!-- todo código deverá ser criado aqui -->
             <div class="logo-container">
                 <img src="./logo.svg" alt="logo"/> 
                 <h1>
                     WEB  
                 </h1>
+            </div>
+            <div class="form-container"> 
+                <h1>LOGIN</h1>
+                <form name="form_login" action="do_login.html" method="POST">
+                    <input type="text" name="nome" value="" placeholder="Usuário" /><br>
+                    <input type="password" name="senha" value="" placeholder="Senha"><br>
+                    <input type="submit" class="login-button" value="Entrar">
+                </form>
             </div>
             <div id="options">
                 <a> Esqueceu a Senha?</a><br>
