move files into separated folders

--- a/src/cadastro/cadastro.html
+++ b/src/cadastro/cadastro.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cadastro</title>
 
-    <link rel="stylesheet" href="cadastro.css" />
-    <link rel="stylesheet" href="base.css" />
+    <link rel="stylesheet" href="./cadastro.css" />
+    <link rel="stylesheet" href="../base.css" />
 
 </head>
 <body>
