--- a/src/denuncias-convidado/denuncias-convidado.html
+++ b/src/denuncias-convidado/denuncias-convidado.html
@@ -5,9 +5,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="base.css" />
-    <link rel="stylesheet" href="denuncias-convidado.css" />
+    <link rel="stylesheet" href="../reset.css" />
+    <link rel="stylesheet" href="../base.css" />
+    <link rel="stylesheet" href="./denuncias-convidado.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,11 +19,11 @@
 
   <body>
     <div class="guest-complaint">
-        <img src="./tree-dots-option" alt="options">
+        <img src="../assets/tree-dots-option" alt="options">
         <h1>Denúncias</h1>
         <div class="search-container">
             <span>Pesquisa</span>
-            <input type="text" name="Pesquisa" class="sea   rch-input">
+            <input type="text" name="Pesquisa" class="search-input">
             <button class="search-button" name="Botao"></button>
         </div>
         <div class="filter-container">
