--- a/src/denuncias/denuncias.html
+++ b/src/denuncias/denuncias.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="base.css" />
-    <link rel="stylesheet" href="denuncias.css" />
+    <link rel="stylesheet" href="../reset.css" />
+    <link rel="stylesheet" href="../base.css" />
+    <link rel="stylesheet" href="./denuncias.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -30,7 +30,7 @@
               placeholder="Pesquisa"
             />
             <div class="button-search">
-              <img class="img-search" src="./search.svg" alt="Search" />
+              <img class="img-search" src="../assets/icon-search.svg" alt="Search" />
             </div>
           </form>
         </div>
