--- a/src/login/login.html
+++ b/src/login/login.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="base.css" />
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="../reset.css" />
+    <link rel="stylesheet" href="../base.css" />
+    <link rel="stylesheet" href="./login.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,7 +19,7 @@
   <body>
     <div class="card-base sign-up">
       <div class="logo-container">
-        <img src="./logo.svg" alt="logo" />
+        <img src="../assets/logo.svg" alt="logo" />
         <h1>WEB</h1>
       </div>
       <div class="form-container">
