--- a/src/minhas-denuncias/minhas-denuncias.html
+++ b/src/minhas-denuncias/minhas-denuncias.html
@@ -5,9 +5,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="reset.css" />
-  <link rel="stylesheet" href="base.css" />
-  <link rel="stylesheet" href="minhas-denuncias.css" />
+  <link rel="stylesheet" href="../reset.css" />
+  <link rel="stylesheet" href="../base.css" />
+  <link rel="stylesheet" href="./minhas-denuncias.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
@@ -51,9 +51,9 @@
 
     <!-- Barra Menu-->
     <div class="menu-bar">
-      <img src="icon-user.svg" alt="icon">
-      <img src="icon-home.svg" alt="icon">
-      <img src="icon-tasklist.svg" alt="icon">
+      <img src="../assets/icon-user.svg" alt="icon">
+      <img src="../assets/icon-home.svg" alt="icon">
+      <img src="../assets/icon-tasklist.svg" alt="icon">
     </div>
 
   </div>
