--- a/src/recuperar-senha/recuperar-senha.html
+++ b/src/recuperar-senha/recuperar-senha.html
@@ -3,7 +3,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="recuperar-senha.css">
+        <link rel="stylesheet" href="./recuperar-senha.css">
         <title>Recuperar senha</title>
     </head>
         <body>
