--- a/src/usuario/usuario.html
+++ b/src/usuario/usuario.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="base.css" />
-    <link rel="stylesheet" href="usuario.css" />
+    <link rel="stylesheet" href="../reset.css" />
+    <link rel="stylesheet" href="../base.css" />
+    <link rel="stylesheet" href="./usuario.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,44 +18,44 @@
 
   <body>
     <div class="card-base user">
-        <img src="./user.svg" alt="logo" />
+        <img src="../assets/user.svg" alt="logo" />
         <span>
             Nome do usuário
         </span>
         <div class="email-container">
-            <img src="./email.svg" alt="logo" />
+            <img src="../assets/email.svg" alt="logo" />
             <span style="margin-left: 10px;">
                 michaelalberto@gmail.com
             </span>
         </div>
         <div class="telephone-container">
-            <img src="./telephone.svg" alt="logo" />
+            <img src="../assets/telephone.svg" alt="logo" />
             <span style="margin-left: 10px;">   
                 55 (31) 99999-9999
             </span>
         </div>
         <div class="age-container">
-            <img src="./age-group.svg" alt="logo" />
+            <img src="../assets/age-group.svg" alt="logo" />
             <span style="margin-left: 10px;">
                 18 anos
             </span>
         </div>
         <div class="data-container">
-            <img src="./data.svg" alt="logo" />
+            <img src="../assets/data.svg" alt="logo" />
             <span style="margin-left: 10px;">
                 10 Análises
             </span>
         </div>
         <div class="chat-container">
-            <img src="./chat.svg" alt="logo" />
+            <img src="../assets/chat.svg" alt="logo" />
             <span style="margin-left: 10px;">
                1 Comentário
             </span>
         </div>
         <div class="menu-bar">
-            <img src="icon-user.svg" alt="icon">
-            <img src="icon-home.svg" alt="icon">
-            <img src="icon-tasklist.svg" alt="icon">
+            <img src="../assets/icon-user.svg" alt="icon">
+            <img src="../assets/icon-home.svg" alt="icon">
+            <img src="../assets/icon-tasklist.svg" alt="icon">
           </div>
     </div>
   </body>
