fix denuncias page style

--- a/src/denuncias/denuncias.html
+++ b/src/denuncias/denuncias.html
@@ -51,12 +51,47 @@
           <tr>
             <td>www.aloha.com.br</td>
             <td>Aloha</td>
+            <td>Baixa</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Média</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
             <td>Alta</td>
           </tr>
           <tr>
             <td>www.aloha.com.br</td>
             <td>Aloha</td>
             <td>Alta</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Alta</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Média</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Alta</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Média</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Baixa</td>
           </tr>
           <tr>
             <td>www.aloha.com.br</td>
@@ -67,6 +102,11 @@
         <div class="table-footer">
           <p>Total de registros: 10</p>
           <p>Página 1 de 143</p>
+        </div>
+        <div class="menu-bar">
+          <img src="../assets/icon-user.svg" alt="icon">
+          <img src="../assets/icon-home.svg" alt="icon">
+          <img src="../assets/icon-tasklist.svg" alt="icon">
         </div>
       </main>
     </div>
