--- a/src/denuncias-convidado/denuncias-convidado.html
+++ b/src/denuncias-convidado/denuncias-convidado.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html lang="pt-br">
@@ -14,48 +13,97 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <title>SOS Web</title>
+    <title>SOS Web - Denúncias</title>
   </head>
 
   <body>
-    <div class="guest-complaint">
-        <img src="../assets/tree-dots-option" alt="options">
+    <div class="card-base guest-denunciations">
+      <header>
         <h1>Denúncias</h1>
-        <div class="search-container">
-            <span>Pesquisa</span>
-            <input type="text" name="Pesquisa" class="search-input">
-            <button class="search-button" name="Botao"></button>
+        <div class="form-search">
+          <p>Pesquisa</p>
+          <form name="form-search" class="form-search" method="POST">
+            <input
+              type="search"
+              class="input-base"
+              name="search"
+              placeholder="Pesquisa"
+            />
+            <div class="button-search">
+              <img class="img-search" src="../assets/icon-search.svg" alt="Search" />
+            </div>
+          </form>
         </div>
-        <div class="filter-container">
-            <span>Filtros</span>
-            <button class="filter-button"></button>
-            <table class="complaint-table">
-                <tr>
-                    <th>Site/email</th>
-                    <th>Nome</th>
-                    <th>Nocividade</th>
-                </tr>
-                <tr>
-                    <td>www.aloha.br</td>
-                    <td>Aloha</td>
-                    <td>Alta</td>
-                </tr>  
-                <tr>
-                    <td>www.frigonegocios.br</td>
-                    <td>Frigo Negócios</td>
-                    <td>Baixa</td>
-                </tr> 
-                <tr>
-                    <td>www.expressomaquinas.br</td>
-                    <td>Expresso Máquinas</td>
-                    <td>Médio</td>
-                </tr>
-            </table>
+        <div class="filters">
+          <p>Filtros</p>
+          <button class="button-base">Internacional</button>
+          <button class="button-base">Nacional</button>
+          <button class="button-base">Outros</button>
         </div>
-        <div class="footer-pagination-container">
-            <span>Total de registro: 3</span>
-            <span>Página 1 de 1 ></span>
+      </header>
+      <main>
+        <table style="overflow-x: auto">
+          <tr class="table-header">
+            <th>Site/E-mail</th>
+            <th>Nome</th>
+            <th>Nocividade</th>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Baixa</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Média</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Alta</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Alta</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Alta</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Média</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Alta</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Média</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Baixa</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Alta</td>
+          </tr>
+        </table>
+        <div class="table-footer">
+          <p>Total de registros: 10</p>
+          <p>Página 1 de 143</p>
         </div>
+      </main>
     </div>
   </body>
 </html>
