Centralização do texto da pagina Recuperar Senha

--- a/src/recuperar-senha/recuperar-senha.html
+++ b/src/recuperar-senha/recuperar-senha.html
@@ -11,8 +11,8 @@
                     <form name="form_recuperarsenha" class=recuperarsenha method="POST">
                         </center>
                             <h1>Recuperar Senha</h1>
-                            <input type="text" name="nome" value="" placeholder="Nova senha" /><br>
-                            <input type="text" name="senha" value="" placeholder="Confirme a senha"><br>
+                            <input type="text" name="nome" value="" placeholder="Nova senha" style="text-align: center;" /><br>
+                            <input type="text" name="senha" value="" placeholder="Confirme a senha" style="text-align: center;"><br>
                             <input type="submit" class="enviar-button" value="Salvar">
                         </center>
                     </form>
