adc resposividade rec senha

--- a/src/recuperar-senha/recuperar-senha.html
+++ b/src/recuperar-senha/recuperar-senha.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<html lang="pt-br">
-    <head>
-        <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="recuperar-senha.css">
-        <title>Recuperar senha</title>
-    </head>
-        <body>
-            <div class="sign-up">
-                    <form name="form_recuperarsenha" class=recuperarsenha method="POST">
-                            <h1>Recuperar Senha</h1>
-                            <input type="text" name="nome" value="" placeholder="Nova senha" /><br>
-                            <input type="text" name="senha" value="" placeholder="Confirme a senha"><br>
-                            <input type="submit" class="enviar-button" value="Salvar">
-                    </form>
-            </div>
-        </body>
+<head>
+    <link rel="stylesheet" href="../reset.css" />
+    <link rel="stylesheet" href="../base.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recuperar Senha</title>
+    <link rel="stylesheet" href="recuperar-senha.css">
+</head>
+
+<body>
+    <div class="card-base recup-senha">
+        <h1>RECUPERAR SENHA</h1> <br>
+        <form name="form_recuperarsenha" action="do_recuperarsenha.html" method="post">
+            <input type="text" name="insirasuanovasenha" placeholder="Insira Sua Nova Senha" id="novasenha">
+            <br>
+            <input type="text" name="insiranovamente" placeholder="Insira Sua Nova Senha Novamente"
+                id="insiranovamente">
+            <br>
+            <input type="submit" id="botaosalvar" value="Salvar">
+        </form>
+    </div>
+</body>
+
 </html>
