--- a/src/recuperar-senha/recuperar-senha.html
+++ b/src/recuperar-senha/recuperar-senha.html
@@ -14,13 +14,11 @@
 <body>
     <div class="card-base recup-senha">
         <h1>RECUPERAR SENHA</h1> <br>
-        <form name="form_recuperarsenha" action="do_recuperarsenha.html" method="post">
-            <input type="text" name="insirasuanovasenha" placeholder="Insira Sua Nova Senha" id="novasenha">
+        <form name="form_login" class="form-login" action="do_login.html" method="POST">
+            <input type="text" name="insirasuanovasenha" placeholder="Insira Sua Nova Senha" class="input-base"> <br>
+            <input type="text" name="insiranovamente" placeholder="Insira Novamente a Senha" class="input-base">
             <br>
-            <input type="text" name="insiranovamente" placeholder="Insira Sua Nova Senha Novamente"
-                id="insiranovamente">
-            <br>
-            <input type="submit" id="botaosalvar" value="Salvar">
+            <input type="submit" class="button-base bg-main-color" value="Salvar">
         </form>
     </div>
 </body>
