Alterar type para password

--- a/src/recuperar-senha/recuperar-senha.html
+++ b/src/recuperar-senha/recuperar-senha.html
@@ -15,8 +15,8 @@
     <div class="card-base recup-senha">
         <h1>RECUPERAR SENHA</h1> <br>
         <form name="form_login" class="form-login" action="do_login.html" method="POST">
-            <input type="text" name="insirasuanovasenha" placeholder="Insira Sua Nova Senha" class="input-base"> <br>
-            <input type="text" name="insiranovamente" placeholder="Insira Novamente a Senha" class="input-base">
+            <input type="password" name="insirasuanovasenha" placeholder="Insira Sua Nova Senha" class="input-base"> <br>
+            <input type="password" name="insiranovamente" placeholder="Insira Novamente a Senha" class="input-base">
             <br>
             <input type="submit" class="button-base bg-main-color" value="Salvar">
         </form>
