--- a/src/criar-denuncia/criar-denuncia.html
+++ b/src/criar-denuncia/criar-denuncia.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRIAR DENÚNCIA</title>
     <link rel="stylesheet" href="../base.css" />
-    <link rel="stylesheet" href="criarD.css" />
+    <link rel="stylesheet" href="criar-denuncia.css" />
 
 </head>
 <body>
