--- a/src/criar-denuncia/criar-denuncia.html
+++ b/src/criar-denuncia/criar-denuncia.html
@@ -47,7 +47,7 @@
               <br/>
               <br/>
               <br/>
-              <class id="anexar"> Anexar documento  <img src="...\img\paper-clip.jpg" width="20" height="20"> </class>
+              <class id="anexar"> Anexar documento  <img src="../assets/paper-clip 1.jpg" width="28" height="28"> </class>
               <br/>
             <input type="submit" class="button-base bg-main-color"  value="Finalizar Denúncia" /> 
           </form>
