add desktop template

--- a/src/minhas-denuncias/minhas-denuncias.html
+++ b/src/minhas-denuncias/minhas-denuncias.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../reset.css" />
   <link rel="stylesheet" href="../base.css" />
+  <link rel="stylesheet" href="../index.css" />
   <link rel="stylesheet" href="./minhas-denuncias.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,46 +19,75 @@
 </head>
 
 <body>
-  <div class="card-base denounce">
-    <h1>Minhas Denúncias</h1>
-
-    <!-- Analyses-->
-    <div class="denounce-analyses">
-      <div class="title-denounce-analyses">
-        <h2>Spotlight</h2>
-        <i style="margin-right: 10px;" class="gg-trash"></i>
+  <div class="left-navbar">
+    <div class="logo-nav">
+      <img src="../assets/white_icon.svg" alt="sos-logo">
+      <h4>WEB</h4>
+    </div>
+    <div class="nav-options">
+      <div class="home-nav">
+        <img id="home-icon" class="left-nav-icon" src="../assets/icon-home.svg" alt="home">
+        <p>Denúncias</p>
       </div>
-      <div style="margin-left: 25px;">
-        <h3>Em Análise</h3>
-        <h4>www.spotlight.com.br</h4>
-        <h5>O site possui vários anúncios fake que redirecionam para páginas maliciosas.</h5>
+      <div class="user-denunciations-nav">
+        <img id="denunciations-icon" class="left-nav-icon" src="../assets/icon-tasklist.svg" alt="denunciations">
+        <p>Minhas denúncias</p>
+      </div>
+      <div class="logout-nav">
+        <img id="logout-icon" class="left-nav-icon" src="../assets/exit.svg" alt="logout">
+        <p>Sair</p>
       </div>
     </div>
-
-    <!-- Malicious-->
-    <div class="denounce-malicious">
-      <div class="title-denounce-malicious">
-        <h2>BaixeAgora</h2>
-        <i style="margin-right: 10px;" class="gg-trash"></i>
-      </div>
-      <div style="margin-left: 25px;">
-        <h3>Malicioso</h3>
-        <h4>www.baixeagora.com.br</h4>
-        <h5>Muito Spam não me parece um site confíavel.</h5>
-      </div>
-    </div>
-    <!-- Botão +-->
-    <button>+</button>
-
-    <!-- Barra Menu-->
-    <div class="menu-bar">
-      <img src="../assets/icon-user.svg" alt="icon">
-      <img src="../assets/icon-home.svg" alt="icon">
-      <img src="../assets/icon-tasklist.svg" alt="icon">
-    </div>
-
   </div>
- 
+  <div class="app">
+    <div class="top-navbar">
+      <p>Lorem ipsum</p>
+      <img src="../assets/user.svg" alt="user">
+    </div>
+    <div class="app-container">
+      <div class="card-app">
+        <div class="denounce">
+          <h1>Minhas Denúncias</h1>
+          <!-- Analyses-->
+          <div class="denounce-analyses">
+            <div class="title-denounce-analyses">
+              <h2>Spotlight</h2>
+              <i style="margin-right: 10px;" class="gg-trash"></i>
+            </div>
+            <div style="margin-left: 25px;">
+              <h3>Em Análise</h3>
+              <h4>www.spotlight.com.br</h4>
+              <h5>O site possui vários anúncios fake que redirecionam para páginas maliciosas.</h5>
+            </div>
+          </div>
+
+          <!-- Malicious-->
+          <div class="denounce-malicious">
+            <div class="title-denounce-malicious">
+              <h2>BaixeAgora</h2>
+              <i style="margin-right: 10px;" class="gg-trash"></i>
+            </div>
+            <div style="margin-left: 25px;">
+              <h3>Malicioso</h3>
+              <h4>www.baixeagora.com.br</h4>
+              <h5>Muito Spam não me parece um site confíavel.</h5>
+            </div>
+          </div>
+          <!-- Botão +-->
+          <button>+</button>
+
+          <!-- Barra Menu-->
+          <!-- <div class="menu-bar">
+            <img src="../assets/icon-user.svg" alt="icon">
+            <img src="../assets/icon-home.svg" alt="icon">
+            <img src="../assets/icon-tasklist.svg" alt="icon">
+          </div> -->
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 </body>
 
 </html>
