--- a/src/adicionar-comentarios/adicionar-comentarios.html
+++ b/src/adicionar-comentarios/adicionar-comentarios.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CRIAR DENÚNCIA</title>
+  <title>cadastro</title>
+
+  <link rel="stylesheet" href="adicionar-comentarios.css" />
+  <link rel="stylesheet" href="../reset.css" />
   <link rel="stylesheet" href="../base.css" />
   <link rel="stylesheet" href="../index.css" />
-  <link rel="stylesheet" href="criar-denuncia.css" />
 
 </head>
 
@@ -41,35 +43,19 @@
     <div class="app-container">
       <div class="card-app">
         <div class="sign-up">
-          <!-- DIV DA PÁGINA -->
           <div class="form-container">
-            <h1 class="text-main-color">Criar Denúncia </h1>
-            <form name="form_login" class="form-login" action="do_login.html" method="POST">
-              <br />
-              Nome da instituição/vendedor:
-
-              <input type="text" class="input-base" name="nome" size="40px" />
-
-              <br />
-              <br />
-
-              Link ou email da denúncia
-
-              <input type="text" class="input-base" name="link" size="40px" />
+            <p class="text-main-color">Comentário</p>
+            <form name="form_login" class="form-login" action="do_login.html" method="POST"> <br />
+              Escreva algum Comentário:
+              <textarea name="texto" rows="22" cols="60" style="resize:none"> preencha com algum texto </textarea>
               <br />
               <br />
               <br />
-              Conte sua história:
-              <textarea name="texto" rows="10" cols="50" style="resize:none"> preencha com algum texto </textarea>
-              <br />
-              <br />
-              <br />
-              <br />
-              <class id="anexar"> Anexar documento <img src="../assets/paper-clip 1.jpg" width="28" height="28">
-              </class>
-              <br />
-              <input type="submit" class="button-base bg-main-color" value="Finalizar Denúncia" />
+              <input type="submit" class="button-base bg-main-color" value="Enviar comentário" />
             </form>
+            <br />
+            <br />
+            <br />
             <!-- <div class=" menu-bar">
               <img src="../assets/icon-user.svg" alt="icon">
               <img src="../assets/icon-home.svg" alt="icon">
@@ -79,7 +65,6 @@
         </div>
       </div>
     </div>
-  </div>
 </body>
 
 </html>
