--- a/src/criar-denuncia/criar-denuncia.html
+++ b/src/criar-denuncia/criar-denuncia.html
@@ -45,25 +45,25 @@
           <div class="form-container">
             <h1 class="text-main-color">Criar Denúncia </h1>
             <form name="form_login" class="form-login" action="do_login.html" method="POST">
-              Nome da instituição/vendedor:
+              <b>Nome da instituição/vendedor:</b>
 
               <input type="text" class="input-base" name="nome" size="40px" />
 
               <br />
               <br />
 
-              Link ou email da denúncia
+              <b>Link ou email da denúncia</b>
 
               <input type="text" class="input-base" name="link" size="40px" />
               <br />
               <br />
-              Conte sua história:
+              <b>Conte sua história:</b>
               <textarea name="texto" rows="10" cols="50" style="resize:none"> preencha com algum texto </textarea>
               <br />
               <class id="anexar"> Anexar documento <img src="../assets/paper-clip 1.jpg" width="28" height="28">
               </class>
               <br />
-              <input type="submit" class="button-base bg-main-color" value="Finalizar Denúncia" />
+              <input type="submit" class="button-base bg-main-color" size="30px" value="Finalizar Denúncia" />
             </form>
             <!-- <div class=" menu-bar">
               <img src="../assets/icon-user.svg" alt="icon">
@@ -78,5 +78,3 @@
 </body>
 
 </html>
-
-              
