refactor: move index.css to base.css and add a pattern to html head

--- a/src/adicionar-comentarios/adicionar-comentarios.html
+++ b/src/adicionar-comentarios/adicionar-comentarios.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>cadastro</title>
 
   <link rel="stylesheet" href="adicionar-comentarios.css" />
   <link rel="stylesheet" href="../reset.css" />
   <link rel="stylesheet" href="../base.css" />
-  <link rel="stylesheet" href="../index.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
+    rel="stylesheet" />
 
+  <title>Adicionar comentários - SOS WEB</title>
 </head>
 
 <body>
