--- a/src/minhas-denuncias/minhas-denuncias.html
+++ b/src/minhas-denuncias/minhas-denuncias.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="../reset.css" />
   <link rel="stylesheet" href="../base.css" />
-  <link rel="stylesheet" href="../index.css" />
   <link rel="stylesheet" href="./minhas-denuncias.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,7 +14,8 @@
     rel="stylesheet" />
   <link href='https://css.gg/trash.css' rel='stylesheet'>
   <link href='https://css.gg/add.css' rel='stylesheet'>
-  <title>SOS Web</title>
+
+  <title>Minhas denúncias - SOS WEB</title>
 </head>
 
 <body>
