--- a/src/criar-denuncia/criar-denuncia.html
+++ b/src/criar-denuncia/criar-denuncia.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CRIAR DENÚNCIA</title>
-  <link rel="stylesheet" href="../base.css" />
-  <link rel="stylesheet" href="../index.css" />
-  <link rel="stylesheet" href="criar-denuncia.css" />
 
+  <link rel="stylesheet" href="../reset.css" />
+  <link rel="stylesheet" href="../base.css" />
+  <link rel="stylesheet" href="./criar-denuncia.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
+    rel="stylesheet" />
+
+  <title>Criar denúncia - SOS WEB</title>
 </head>
 
 <body>
