--- a/src/denuncias/denuncias.html
+++ b/src/denuncias/denuncias.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="../reset.css" />
   <link rel="stylesheet" href="../base.css" />
-  <link rel="stylesheet" href="../index.css" />
   <link rel="stylesheet" href="./denuncias.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
     rel="stylesheet" />
-  <title>SOS Web - Denúncias</title>
+
+  <title>Denúncias - SOS WEB</title>
 </head>
 
 <body>
