--- a/src/denuncia-modal/denuncia-modal.html
+++ b/src/denuncia-modal/denuncia-modal.html
@@ -1,1 +1,158 @@
+<!DOCTYPE html>
 
+<html lang="pt-br">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../reset.css" />
+  <link rel="stylesheet" href="../base.css" />
+  <link rel="stylesheet" href="../index.css" />
+  <link rel="stylesheet" href="./denuncia-modal.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
+    rel="stylesheet" />
+  <title>SOS Web - Denúncias</title>
+</head>
+
+<body>
+
+
+
+  <div class="left-navbar">
+    <div class="logo-nav">
+      <img src="../assets/white_icon.svg" alt="sos-logo">
+      <h4>WEB</h4>
+    </div>
+    <div class="nav-options">
+      <div class="home-nav">
+        <img id="home-icon" class="left-nav-icon" src="../assets/icon-home.svg" alt="home">
+        <p>Denúncias</p>
+      </div>
+      <div class="user-denunciations-nav">
+        <img id="denunciations-icon" class="left-nav-icon" src="../assets/icon-tasklist.svg" alt="denunciations">
+        <p>Minhas denúncias</p>
+      </div>
+      <div class="logout-nav">
+        <img id="logout-icon" class="left-nav-icon" src="../assets/exit.svg" alt="logout">
+        <p>Sair</p>
+      </div>
+    </div>
+  </div>
+  <div class="app">
+    <div class="top-navbar">
+      <p>Lorem ipsum</p>
+      <img src="../assets/user.svg" alt="user">
+    </div>
+    <div class="app-container">
+      <div class="card-app">
+        <div class="card-base denunciations">
+          <header>
+            <h1>Denúncias</h1>
+            <div class="form-search">
+              <p>Pesquisa</p>
+              <form name="form-search" class="form-search" method="POST">
+                <input type="search" class="input-base" name="search" placeholder="Pesquisa" />
+                <div class="button-search">
+                  <img class="img-search" src="../assets/icon-search.svg" alt="Search" />
+                </div>
+              </form>
+            </div>
+            <div class="filters">
+              <p>Filtros</p>
+              <button class="button-base">Internacional</button>
+              <button class="button-base">Nacional</button>
+              <button class="button-base">Outros</button>
+            </div>
+          </header>
+
+          <!Modal>
+
+            <Label for="check" class="abrirmodal"> Abrir Modal </Label>
+
+            <input type="checkbox" id="check" class="checkboxModal">
+
+            <div class="modal">
+              <label for="check" class="fecharmodal">X</label>
+
+              <div class="conteudomodal">
+                <h1 class="sitemodal"> www.Aloha.net</h1>
+                <p class="paramodal"> </br> </br> Esse site de compras possui muitos comentários e avaliações de golpes
+                  e aparentemente a plataforma não pune os estelionatários. </p>
+
+              </div>
+            </div>
+
+            <main>
+
+              <table style="overflow-x: auto">
+                <tr class="table-header">
+                  <th>Site/E-mail</th>
+                  <th>Nome</th>
+                  <th>Nocividade</th>
+                </tr>
+                <tr>
+                  <td>www.aloha.com.br</td>
+                  <td>Aloha</td>
+                  <td>Baixa</td>
+                </tr>
+                <tr>
+                  <td>www.aloha.com.br</td>
+                  <td>Aloha</td>
+                  <td>Média</td>
+                </tr>
+                <tr>
+                  <td>www.aloha.com.br</td>
+                  <td>Aloha</td>
+                  <td>Alta</td>
+                </tr>
+                <tr>
+                  <td>www.aloha.com.br</td>
+                  <td>Aloha</td>
+                  <td>Alta</td>
+                </tr>
+                <tr>
+                  <td>www.aloha.com.br</td>
+                  <td>Aloha</td>
+                  <td>Alta</td>
+                </tr>
+                <tr>
+                  <td>www.aloha.com.br</td>
+                  <td>Aloha</td>
+                  <td>Média</td>
+                </tr>
+                <tr>
+                  <td>www.aloha.com.br</td>
+                  <td>Aloha</td>
+                  <td>Alta</td>
+                </tr>
+                <tr>
+                  <td>www.aloha.com.br</td>
+                  <td>Aloha</td>
+                  <td>Média</td>
+                </tr>
+                <tr>
+                  <td>www.aloha.com.br</td>
+                  <td>Aloha</td>
+                  <td>Baixa</td>
+                </tr>
+                <tr>
+                  <td>www.aloha.com.br</td>
+                  <td>Aloha</td>
+                  <td>Alta</td>
+                </tr>
+
+              </table>
+              <div class="table-footer">
+                <p>Total de registros: 10</p>
+                <p>Página 1 de 143</p>
+              </div>
+            </main>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+
+</html>
