feat: fixed navbar

--- a/src/denuncias/denuncias.html
+++ b/src/denuncias/denuncias.html
@@ -44,7 +44,7 @@
     </div>
     <div class="app-container">
       <div class="card-app">
-        <div class="card-base denunciations">
+        <div class="denunciations">
           <header>
             <h1>Denúncias</h1>
             <div class="form-search">
