fix: head title and pattern

--- a/src/denuncia-modal/denuncia-modal.html
+++ b/src/denuncia-modal/denuncia-modal.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-
 <html lang="pt-br">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <link rel="stylesheet" href="../reset.css" />
   <link rel="stylesheet" href="../base.css" />
   <link rel="stylesheet" href="../index.css" />
@@ -13,7 +13,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
     rel="stylesheet" />
-  <title>SOS Web - Denúncias</title>
+
+  <title>Denúncias modal - SOS Web</title>
 </head>
 
 <body>
